@@ -114,39 +114,31 @@ sub list_file_body {
 }
 
 sub add_dependencies {
-  my($self)    = shift;
-  my($creator) = shift;
-  my($proj)    = shift;
-  my($fh)      = new FileHandle();
-  my($outdir)  = $self->get_outdir();
-  $outdir      = $self->getcwd() if ($outdir eq '.');
+  my($self, $creator, $proj) = @_;
+  my $fh      = new FileHandle();
+  my $outfile = $self->get_outdir() . '/' . $proj;
 
-  if (open($fh, "$outdir/$proj")) {
-    my($write) = 0;
-    my(@read)  = ();
-    my($cwd)   = $self->getcwd();
+  ## The dependencies need to go into the .wrproject, so transform the
+  ## name.
+  $outfile =~ s/\.project$/.wrproject/;
+
+  if (open($fh, $outfile)) {
+    my $write;
+    my @read = ();
+    my $cwd  = $self->getcwd();
     while(<$fh>) {
       if (/MPC\s+ADD\s+DEPENDENCIES/) {
-        my(@projs) = ();
-        my($crlf)  = $self->crlf();
-        my($deps)  = $self->get_validated_ordering($proj);
+        my $crlf = $self->crlf();
+        my $deps = $self->get_validated_ordering($proj);
         foreach my $dep (@$deps) {
-          my($relative) = $self->get_relative_dep_file($creator,
-                                                       "$cwd/$proj",
-                                                       $dep);
+          my $relative = $self->get_relative_dep_file($creator,
+                                                      "$cwd/$proj", $dep);
           if (defined $relative) {
-            if (!$write) {
-              $write = 1;
-            }
-            push(@read, "            <subproject project=\"/$dep\"/>$crlf");
-            push(@projs, $relative);
+            $write = 1;
+            push(@read, "        <subproject project=\"/$dep\"/>$crlf");
           }
         }
-        if ($write) {
-        }
-        else {
-          last;
-        }
+        last if (!$write);
       }
       else {
         push(@read, $_);
@@ -154,7 +146,7 @@ sub add_dependencies {
     }
     close($fh);
 
-    if ($write && open($fh, ">$outdir/$proj")) {
+    if ($write && open($fh, ">$outfile")) {
       foreach my $line (@read) {
         print $fh $line;
       }
