@@ -1,3 +1,14 @@
+Tue May  6 12:26:09 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/WB26WorkspaceCreator.pm:
+
+          Updated the code to work with the .wrproject.
+
+        * templates/wb26wrproject.mpd:
+
+          Added the lines to allow MPC to add dependencies after the
+          workspace has been created.
+
 Tue May  6 07:12:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * modules/WB26WorkspaceCreator.pm:
